# littleGift

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.h.in  index.html  littleGift.db1
cmake/: config.h.in
htmlTemplate/: test1.html  test2.html
include/: DAO.h  EasyWay.h  config.h  dao.h  dao1.h  database.h  htmlTemplate.h  httpUtils.h  httplib.h  httplibUtils.h  littleGift.h  pch.h
include/botan/: botan_all.h  build.h
include/seeker/: common.h  database.h  logger.h  secure.h
lib/: botan.lib  botan.lib.bkp
resources/: tables.sql
resources/htmlTemplate/: base.html  codeChecker.html  editorPage.html  gift.html  hello.html  preview.html  result.html
resources/public/reveal/: reveal.html
src/: DAO.cpp  actions.cpp  appUitls.cpp  base.cpp  dao.cpp  database.cpp  helloLittleGift.cpp  httpUtils.cpp  logger.cpp  main.cpp  pages.cpp  routes.cpp  testActions.cpp  tmptest.cpp
src/test/: daoTest.cpp  dotanTest.cpp  secureTest.cpp  tmptest.cpp
